k8s/emailer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emailer-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/emails
            pathType: "Prefix"
            backend:
              service:
                name: emailer-service
                port:
                  number: 80
